force-app/main/default/objects/redwing__Learning_Feed__c/redwing__Learning_Feed__c.object-meta.xml
<CustomObject>
    <label>Learning Feed</label>
    <nameField>
        <label>Learning Feed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Feeds</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>