force-app/main/default/objects/redwing__Learning_Feed__c/fields/redwing__Learning__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning</label>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>Learning Feeds</relationshipLabel>
    <relationshipName>Learning_Feeds</relationshipName>
    <type>Lookup</type>
</CustomField>