force-app/main/default/objects/redwing__Learning_Feed__c/fields/redwing__Network_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__Network_Id__c</fullName>
    <label>Network Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>