force-app/main/default/objects/redwing__Learning_Feed__c/fields/redwing__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>