force-app/main/default/objects/redwing__Learning_Feed__c/fields/redwing__SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__SObject_Name__c</fullName>
    <label>SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>