force-app/main/default/objects/redwing__Learning_Feed__c/fields/redwing__Training_Plan__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Plan</label>
    <referenceTo>redwing__Training_Plan__c</referenceTo>
    <relationshipLabel>Learning Plan Feeds</relationshipLabel>
    <relationshipName>Learning_Plan_Feeds</relationshipName>
    <type>Lookup</type>
</CustomField>