force-app/main/default/objects/redwing__Learning_Feed__c/fields/redwing__Training_Track__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Trac</label>
    <referenceTo>redwing__Training_Track__c</referenceTo>
    <relationshipLabel>Learning Trac Feeds</relationshipLabel>
    <relationshipName>Learning_Trac_Feeds</relationshipName>
    <type>Lookup</type>
</CustomField>